# go-algorand

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum
agreement/: BUILD.bazel
agreement/agreementtest/: BUILD.bazel
agreement/fuzzer/: BUILD.bazel  test_circular_network_topology_test.go  test_fuzzer_test.go  test_network_bandwidth_test.go  test_regossip_elimination_test.go  test_staked_network_quadratic_growth_test.go  test_unstaked_network_linear_growth_test.go  tests_test.go
agreement/gossip/: BUILD.bazel
catchup/: BUILD.bazel
cmd/algocfg/: BUILD.bazel
cmd/algod/: BUILD.bazel
cmd/algofix/: BUILD.bazel
cmd/algoh/: BUILD.bazel
cmd/algokey/: BUILD.bazel
cmd/algons/: BUILD.bazel
cmd/algorelay/: BUILD.bazel
cmd/algorelay/eb/: BUILD.bazel
cmd/buildtools/: BUILD.bazel
cmd/catchpointdump/: BUILD.bazel
cmd/catchupsrv/: BUILD.bazel
cmd/dbgen/: BUILD.bazel
cmd/diagcfg/: BUILD.bazel
cmd/dispenser/: BUILD.bazel
cmd/genesis/: BUILD.bazel
cmd/goal/: BUILD.bazel
cmd/incorporate/: BUILD.bazel
cmd/kmd/: BUILD.bazel
cmd/kmd/codes/: BUILD.bazel
cmd/loadgenerator/: BUILD.bazel
cmd/msgpacktool/: BUILD.bazel
cmd/netdummy/: BUILD.bazel
cmd/netgoal/: BUILD.bazel
cmd/nodecfg/: BUILD.bazel
cmd/opdoc/: BUILD.bazel
cmd/pingpong/: BUILD.bazel
cmd/tealdbg/: BUILD.bazel
cmd/tealdbg/cdt/: BUILD.bazel
cmd/updater/: BUILD.bazel
compactcert/: BUILD.bazel
components/: BUILD.bazel
components/mocks/: BUILD.bazel
config/: BUILD.bazel
config/defaultsGenerator/: BUILD.bazel
crypto/: BUILD.bazel
crypto/compactcert/: BUILD.bazel
crypto/merklearray/: BUILD.bazel
crypto/merkletrie/: BUILD.bazel
crypto/passphrase/: BUILD.bazel
daemon/algod/: BUILD.bazel  server.go
daemon/algod/api/client/: BUILD.bazel
daemon/algod/api/server/: BUILD.bazel  grpc.go
daemon/algod/api/server/common/: BUILD.bazel
daemon/algod/api/server/grpc/encoding/: encoding.go
daemon/algod/api/server/grpc/proto/: service.pb.go  service_grpc.pb.go
daemon/algod/api/server/lib/: BUILD.bazel
daemon/algod/api/server/lib/middlewares/: BUILD.bazel
daemon/algod/api/server/proto/: service.pb.go  service_grpc.pb.go
daemon/algod/api/server/v1/handlers/: BUILD.bazel
daemon/algod/api/server/v1/routes/: BUILD.bazel
daemon/algod/api/server/v2/: BUILD.bazel
daemon/algod/api/server/v2/test/: BUILD.bazel
daemon/algod/api/spec/common/: BUILD.bazel
daemon/algod/api/spec/v1/: BUILD.bazel
daemon/kmd/: BUILD.bazel
daemon/kmd/api/: BUILD.bazel
daemon/kmd/api/v1/: BUILD.bazel
daemon/kmd/client/: BUILD.bazel
daemon/kmd/config/: BUILD.bazel
daemon/kmd/lib/kmdapi/: BUILD.bazel
daemon/kmd/server/: BUILD.bazel
daemon/kmd/session/: BUILD.bazel
daemon/kmd/wallet/: BUILD.bazel
daemon/kmd/wallet/driver/: BUILD.bazel
data/: BUILD.bazel
data/account/: BUILD.bazel
data/basics/: BUILD.bazel
data/bookkeeping/: BUILD.bazel
data/committee/: BUILD.bazel
data/committee/sortition/: BUILD.bazel
data/datatest/: BUILD.bazel
data/hashable/: BUILD.bazel
data/pools/: BUILD.bazel
data/transactions/: BUILD.bazel
data/transactions/logic/: BUILD.bazel
data/transactions/verify/: BUILD.bazel
debug/carpenter/: BUILD.bazel
debug/coroner/: BUILD.bazel
debug/doberman/: BUILD.bazel
debug/genconsensusconfig/: BUILD.bazel
debug/logfilter/: BUILD.bazel
installer/: BUILD.bazel
ledger/: BUILD.bazel
ledger/apply/: BUILD.bazel
ledger/ledgercore/: BUILD.bazel
libgoal/: BUILD.bazel
logging/: BUILD.bazel
logging/logspec/: BUILD.bazel
logging/telemetryspec/: BUILD.bazel
netdeploy/: BUILD.bazel
netdeploy/remote/: BUILD.bazel
netdeploy/remote/nodecfg/: BUILD.bazel
network/: BUILD.bazel
network/messagetracer/: BUILD.bazel
node/: BUILD.bazel  node_test.go
node/indexer/: BUILD.bazel
nodecontrol/: BUILD.bazel
protocol/: BUILD.bazel
protocol/transcode/: BUILD.bazel
rpcs/: BUILD.bazel
shared/algoh/: BUILD.bazel
shared/pingpong/: BUILD.bazel
test/testdata/configs/: BUILD.bazel
test/testdata/configs/logging/: BUILD.bazel
test/testdata/deployednettemplates/networks/bootstrapped/: BUILD.bazel
test/testdata/nettemplates/: BUILD.bazel
tools/network/: BUILD.bazel
tools/network/cloudflare/: BUILD.bazel
tools/network/dnssec/: BUILD.bazel
tools/network/dnssec/relay-check/: BUILD.bazel
tools/teal/algotmpl/: BUILD.bazel
tools/teal/dkey/dsign/: BUILD.bazel
tools/teal/tealcut/: BUILD.bazel
util/: BUILD.bazel
util/bloom/: BUILD.bazel
util/codecs/: BUILD.bazel
util/condvar/: BUILD.bazel
util/db/: BUILD.bazel
util/execpool/: BUILD.bazel
util/metrics/: BUILD.bazel
util/s3/: BUILD.bazel
util/tar/: BUILD.bazel
util/timers/: BUILD.bazel
util/tokens/: BUILD.bazel
