load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agreement",
    srcs = [
        "abstractions.go",
        "actions.go",
        "actiontype_string.go",
        "actor.go",
        "agreeInstall.go",
        "asyncVoteVerifier.go",
        "autopsy.go",
        "bundle.go",
        "cadaver.go",
        "certificate.go",
        "coservice.go",
        "coservicetype_string.go",
        "cryptoRequestContext.go",
        "cryptoVerifier.go",
        "demux.go",
        "doc.go",
        "errors.go",
        "events.go",
        "eventtype_string.go",
        "listener.go",
        "message.go",
        "msgp_gen.go",
        "params.go",
        "persistence.go",
        "player.go",
        "playerContract.go",
        "proposal.go",
        "proposalManager.go",
        "proposalManagerContract.go",
        "proposalStore.go",
        "proposalStoreContract.go",
        "proposalTable.go",
        "proposalTracker.go",
        "proposalTrackerContract.go",
        "pseudonode.go",
        "router.go",
        "selector.go",
        "service.go",
        "statemachinetag_string.go",
        "trace.go",
        "traceTime.go",
        "types.go",
        "vote.go",
        "voteAggregator.go",
        "voteAggregatorContract.go",
        "voteAuxiliary.go",
        "voteAuxiliaryContract.go",
        "voteTracker.go",
        "voteTrackerContract.go",
    ],
    importpath = "github.com/algorand/go-algorand/agreement",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//crypto",
        "//data/account",
        "//data/basics",
        "//data/bookkeeping",
        "//data/committee",
        "//logging",
        "//logging/logspec",
        "//logging/telemetryspec",
        "//protocol",
        "//util/db",
        "//util/execpool",
        "//util/timers",
        "@com_github_algorand_go_deadlock//:go_default_library",
        "@com_github_algorand_msgp//msgp:go_default_library",
    ],
)

go_test(
    name = "agreement_test",
    size = "large",
    srcs = [
        "bundle_test.go",
        "certificate_test.go",
        "common_test.go",
        "cryptoRequestContext_test.go",
        "cryptoVerifier_test.go",
        "demux_test.go",
        "encoding_test.go",
        "message_test.go",
        "msgp_gen_test.go",
        "persistence_test.go",
        "player_permutation_test.go",
        "player_test.go",
        "proposalManager_test.go",
        "proposalStore_test.go",
        "proposalTracker_test.go",
        "proposal_test.go",
        "pseudonode_test.go",
        "service_test.go",
        "state_machine_test.go",
        "voteAggregator_test.go",
        "voteAuxiliary_test.go",
        "voteTracker_test.go",
        "vote_test.go",
    ],
    embed = [":agreement"],
    deps = [
        "//config",
        "//crypto",
        "//data/account",
        "//data/basics",
        "//data/bookkeeping",
        "//data/committee",
        "//logging",
        "//protocol",
        "//util/db",
        "//util/timers",
        "@com_github_algorand_go_deadlock//:go_default_library",
        "@com_github_algorand_msgp//msgp:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
