load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "catchup",
    srcs = [
        "catchpointService.go",
        "ledgerFetcher.go",
        "peerSelector.go",
        "service.go",
        "universalFetcher.go",
    ],
    importpath = "github.com/algorand/go-algorand/catchup",
    visibility = ["//visibility:public"],
    deps = [
        "//agreement",
        "//config",
        "//crypto",
        "//data/basics",
        "//data/bookkeeping",
        "//ledger",
        "//ledger/ledgercore",
        "//logging",
        "//logging/telemetryspec",
        "//network",
        "//protocol",
        "//rpcs",
        "//util",
        "//util/execpool",
        "@com_github_algorand_go_deadlock//:go_default_library",
    ],
)

go_test(
    name = "catchup_test",
    srcs = [
        "fetcher_test.go",
        "ledgerFetcher_test.go",
        "peerSelector_test.go",
        "pref_test.go",
        "service_test.go",
        "universalFetcher_test.go",
    ],
    embed = [":catchup"],
    deps = [
        "//agreement",
        "//components/mocks",
        "//config",
        "//crypto",
        "//data",
        "//data/account",
        "//data/basics",
        "//data/bookkeeping",
        "//data/committee",
        "//data/datatest",
        "//data/transactions",
        "//ledger",
        "//logging",
        "//network",
        "//protocol",
        "//rpcs",
        "//util/db",
        "//util/execpool",
        "@com_github_algorand_go_deadlock//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
