load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ledger",
    srcs = [
        "accountdb.go",
        "acctupdates.go",
        "appcow.go",
        "applications.go",
        "blockdb.go",
        "blockqueue.go",
        "bulletin.go",
        "catchpointwriter.go",
        "catchupaccessor.go",
        "compactcert.go",
        "cow.go",
        "eval.go",
        "ledger.go",
        "lruaccts.go",
        "metrics.go",
        "msgp_gen.go",
        "notifier.go",
        "onlineacct.go",
        "roundlru.go",
        "time.go",
        "tracker.go",
        "txtail.go",
        "voters.go",
    ],
    importpath = "github.com/algorand/go-algorand/ledger",
    visibility = ["//visibility:public"],
    deps = [
        "//agreement",
        "//config",
        "//crypto",
        "//crypto/compactcert",
        "//crypto/merklearray",
        "//crypto/merkletrie",
        "//data/basics",
        "//data/bookkeeping",
        "//data/committee",
        "//data/transactions",
        "//data/transactions/logic",
        "//data/transactions/verify",
        "//ledger/apply",
        "//ledger/ledgercore",
        "//logging",
        "//logging/telemetryspec",
        "//protocol",
        "//util/db",
        "//util/execpool",
        "//util/metrics",
        "@com_github_algorand_go_deadlock//:go_default_library",
        "@com_github_algorand_msgp//msgp:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)

go_test(
    name = "ledger_test",
    size = "enormous",
    srcs = [
        "accountdb_test.go",
        "acctupdates_test.go",
        "appcow_test.go",
        "applications_test.go",
        "archival_test.go",
        "blockdb_test.go",
        "blockqueue_test.go",
        "bulletin_test.go",
        "catchpointwriter_test.go",
        "catchupaccessor_test.go",
        "compactcert_test.go",
        "cow_test.go",
        "eval_test.go",
        "ledger_perf_test.go",
        "ledger_test.go",
        "lruaccts_test.go",
        "msgp_gen_test.go",
        "onlineacct_test.go",
        "perf_test.go",
        "roundlru_test.go",
        "txtail_test.go",
    ],
    embed = [":ledger"],
    deps = [
        "//agreement",
        "//config",
        "//crypto",
        "//crypto/compactcert",
        "//data/basics",
        "//data/bookkeeping",
        "//data/transactions",
        "//data/transactions/logic",
        "//data/transactions/verify",
        "//ledger/ledgercore",
        "//logging",
        "//protocol",
        "//util/db",
        "//util/execpool",
        "@com_github_algorand_go_deadlock//:go_default_library",
        "@com_github_algorand_msgp//msgp:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
