load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "network",
    srcs = [
        "connPerfMon.go",
        "dialer.go",
        "limited_reader_slurper.go",
        "messageFilter.go",
        "msgOfInterest.go",
        "multiplexer.go",
        "netprio.go",
        "peersheap.go",
        "phonebook.go",
        "ping.go",
        "rateLimitingTransport.go",
        "requestLogger.go",
        "requestTracker.go",
        "topics.go",
        "wsNetwork.go",
        "wsNetwork_common.go",
        "wsNetwork_windows.go",
        "wsPeer.go",
    ],
    importpath = "github.com/algorand/go-algorand/network",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//crypto",
        "//data/basics",
        "//logging",
        "//logging/telemetryspec",
        "//protocol",
        "//tools/network",
        "//tools/network/dnssec",
        "//util/metrics",
        "@com_github_algorand_go_deadlock//:go_default_library",
        "@com_github_algorand_websocket//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@org_golang_x_net//netutil:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "network_test",
    srcs = [
        "connPerfMon_test.go",
        "limited_reader_slurper_test.go",
        "messageFilter_test.go",
        "msgOfInterest_test.go",
        "multiplexer_test.go",
        "netprio_test.go",
        "phonebook_test.go",
        "ping_test.go",
        "requestLogger_test.go",
        "requestTracker_test.go",
        "topics_test.go",
        "wsNetwork_test.go",
        "wsPeer_test.go",
    ],
    embed = [":network"],
    deps = [
        "//config",
        "//crypto",
        "//data/basics",
        "//logging",
        "//logging/telemetryspec",
        "//protocol",
        "//util",
        "//util/metrics",
        "@com_github_algorand_go_deadlock//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
