load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protocol",
    srcs = [
        "codec.go",
        "codec_tester.go",
        "compactcerts.go",
        "consensus.go",
        "hash.go",
        "msgp_gen.go",
        "networks.go",
        "tags.go",
        "txntype.go",
    ],
    importpath = "github.com/algorand/go-algorand/protocol",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_algorand_go_codec_codec//:go_default_library",
        "@com_github_algorand_go_deadlock//:go_default_library",
        "@com_github_algorand_msgp//msgp:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

go_test(
    name = "protocol_test",
    srcs = [
        "codec_test.go",
        "encodebench_test.go",
        "msgp_gen_test.go",
    ],
    embed = [":protocol"],
    deps = [
        "@com_github_algorand_go_codec_codec//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
