load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "algorelay_lib",
    srcs = [
        "commands.go",
        "relayCmd.go",
    ],
    importpath = "github.com/algorand/go-algorand/cmd/algorelay",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/algorelay/eb",
        "//tools/network/cloudflare",
        "//util/codecs",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "algorelay",
    embed = [":algorelay_lib"],
    visibility = ["//visibility:public"],
)
