load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dbgen_lib",
    srcs = ["main.go"],
    importpath = "github.com/algorand/go-algorand/cmd/dbgen",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "dbgen",
    embed = [":dbgen_lib"],
    visibility = ["//visibility:public"],
)
